[package]
name = "lists"
version = "1.0.3"
edition = "2018"
readme = "README.MD"
repository = "https://github.com/c1m50c/lists"
license = "MIT"
description = "Library containing various implementations of list-like data-structures such as Vectors, LinkedLists, and more."
keywords = [ "data-structures", "linked-list", "vector", "sequence", "list" ]
categories = [ "data-structures" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
doctest = false