[package]
name = "lists"
version = "2.1.0"
edition = "2018"
readme = "README.MD"
repository = "https://github.com/c1m50c/lists"
license = "MIT"
description = "Library containing implementations of various sequential data-structures."
keywords = [ "data-structures", "linked-list", "list", "sequence", "collection" ]
categories = [ "data-structures" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
doctest = false